fix: refine mobile ingredient panel spacing to better match the Figma layout

--- a/src/app/pages/generate-recipe-page/generate-recipe-page.scss
+++ b/src/app/pages/generate-recipe-page/generate-recipe-page.scss
@@ -664,10 +664,12 @@
   .ingredient-suggestions {
     grid-row: 3;
     grid-column: 1 / -1;
+    padding-left: 12px;
   }
 
   .serving-size {
     grid-row: 4;
+    margin-top: 10px;
     margin-left: 0;
     grid-column: 1 / -1;
     width: auto;
